--- a/_posts/2024-12-21-예시를 통해 알아보는 MSA 개념.md
+++ b/_posts/2024-12-21-예시를 통해 알아보는 MSA 개념.md
@@ -1,7 +1,7 @@
-# 서비스로 알아보는 MSA 개념
+# 예시를 통해 알아보는 MSA 개념
 
 ## 목차
-- [서비스로 알아보는 MSA 개념](#서비스로-알아보는-msa-개념)
+- [예시를 통해 알아보는 MSA 개념](#예시를 통해-알아보는-msa-개념)
   - [목차](#목차)
   - [들어가며](#들어가며)
   - [MSA란 무엇인가?](#msa란-무엇인가)
