--- a/_posts/2024-08-06-Intellij의 환경변수 적용방법.md
+++ b/_posts/2024-08-06-Intellij의 환경변수 적용방법.md
@@ -1,4 +1,10 @@
-# Spring DB 연동용 환경변수 적용하기
+---
+layout: post
+title: "Intellij의 환경변수 적용방법"
+date: 2025-01-06
+categories: [Intellij]
+tags: [Intellij, Spring, Programming]
+---
 
 #### 환경변수란?
 
