이미지 추가 및 일부 잘못된 설명 수정

--- a/_posts/2025-01-16-Index에 대해서 알아보기.md
+++ b/_posts/2025-01-16-Index에 대해서 알아보기.md
@@ -37,17 +37,18 @@ CREATE INDEX `loginId` ON `member` (loginId);
 
 **구조적분류**
 
-**Clustered Index vs Non-Clustered Index**[[10분 테코톡] 안돌의 Index - 클러스터드 인덱스](https://www.youtube.com/watch?v=NkZ6r6z2pBg&t=119))
+**Clustered Index vs Non-Clustered Index**([[10분 테코톡] 안돌의 Index - 클러스터드 인덱스](https://www.youtube.com/watch?v=NkZ6r6z2pBg&t=119))
 
 - **Clustered Index(클러스터드 인덱스)**
     - Clustered - 군집을 의미함, 여기서 군집은 인덱스와 데이터
     - PK와 유사함
     - 범위 검색에 강력함
     - 테이블에 여러개
+     ![클러스터드 인덱스](https://prod-files-secure.s3.us-west-2.amazonaws.com/c313a4ff-1684-4580-bfd1-d45db93f2471/405f2ae0-b1d2-4b02-91f8-54639a131ecd/image.png)
 - **Non-Clustered Index(논 클러스터드 인덱스)**
     - 순서 상관없음
     - 한 테이블에 여러개
-
+     ![논클러스터드 인덱스스](https://prod-files-secure.s3.us-west-2.amazonaws.com/c313a4ff-1684-4580-bfd1-d45db93f2471/3e884473-6fb4-4452-8c23-5fe0bf789a41/image.png)
 **기능적 분류**
 
 **PRIMARY KEY : 주키 인덱스, UNIQUE KEY : 유니크 인덱, NORMAL KEY : 일반(유니크가 없는 인덱스), FULL TEXT(풀 텍스트 인덱스)**
@@ -63,9 +64,7 @@ CREATE INDEX `loginId` ON `member` (loginId);
     - 가장 속도가 느립니다.
 - FULL TEXT : 풀텍스트 인덱스
     - 본문검색에 사용할 수 있는 인덱스
-    - 한글이 작동이 안됨
-    - 특수한 목적의 인덱스(본문 검색시, LIKE 구문을 썻을때 빨라지기 위해 사용)
-
+    - 단, 한글 검색에는 제한이 있습니다
 
 ```SQL
 CREATE TABLE `member` (
@@ -80,6 +79,7 @@ CREATE UNIQUE INDEX loginId ON employees(loginId);    -- UNIQUE 인덱스
 
 CREATE INDEX name_index ON employees(`name`);  -- 논 클러스터형 인덱스 이며 일반 인덱스
 
+CREATE FULLTEXT INDEX idx_search ON articles(title, content); -- FULL TEXT 인덱스, 논클러스터형 인덱스
 ```
 
 ### 참고자료
