TDD 설명 태그추가

--- a/_posts/2024-12-22-TDD 가볍게 이해하기.md
+++ b/_posts/2024-12-22-TDD 가볍게 이해하기.md
@@ -1,4 +1,10 @@
-## TDD 가볍게 이해하기: 기본 개념과 간단한 예시
+---
+layout: post
+title: "TDD 가볍게 이해하기: 기본 개념과 간단한 예시"
+date: 2024-12-22
+categories: [Json]
+tags: [Json, Java, JWT]
+---
 
 Test-Driven Development(TDD)는 실제 코드를 작성하기 전에 테스트 코드를 먼저 작성하는 소프트웨어 개발 방법론입니다. 주요 특징은 다음과 같습니다:
 
