--- a/_posts/2024-12-20-라이브러리를 사용하지 않고 리스트를 만드는 방법.md
+++ b/_posts/2024-12-20-라이브러리를 사용하지 않고 리스트를 만드는 방법.md
@@ -1,20 +1,25 @@
-## 라이브러리를 사용하지 않고 Java로 리스트 구현하기
+---
+layout: post
+title: "라이브러리를 사용하지 않고 Java로 리스트 구현하기"
+date: 2024-12-20
+categories: [Java]
+tags: [List, ]
+---
 
 리스트는 Java에서 자주 사용되는 자료구조로, 보통 `ArrayList`나 `LinkedList`와 같은 라이브러리를 활용합니다. 하지만 이번에는 라이브러리를 사용하지 않고, 순수하게 Java로 리스트를 구현하는 방법을 알아보겠습니다.
 
 ### 목차
-- [라이브러리를 사용하지 않고 Java로 리스트 구현하기](#라이브러리를-사용하지-않고-java로-리스트-구현하기)
-  - [목차](#목차)
-  - [목표 기능](#목표-기능)
-  - [리스트와 배열의 차이](#리스트와-배열의-차이)
-  - [구현 과정](#구현-과정)
-    - [1. 배열 초기화 및 추가 기능 구현](#1-배열-초기화-및-추가-기능-구현)
-    - [2. 조회(get) 및 초기화(clear) 기능](#2-조회get-및-초기화clear-기능)
-    - [3. 삭제(delete) 및 삽입(insert) 기능](#3-삭제delete-및-삽입insert-기능)
-    - [4. 크기 반환(size) 및 출력 기능](#4-크기-반환size-및-출력-기능)
-  - [완성된 클래스 코드](#완성된-클래스-코드)
-  - [사용 예시](#사용-예시)
-  - [학습한 내용 정리](#학습한-내용-정리)
+- [목차](#목차)
+- [목표 기능](#목표-기능)
+- [리스트와 배열의 차이](#리스트와-배열의-차이)
+- [구현 과정](#구현-과정)
+  - [1. 배열 초기화 및 추가 기능 구현](#1-배열-초기화-및-추가-기능-구현)
+  - [2. 조회(get) 및 초기화(clear) 기능](#2-조회get-및-초기화clear-기능)
+  - [3. 삭제(delete) 및 삽입(insert) 기능](#3-삭제delete-및-삽입insert-기능)
+  - [4. 크기 반환(size) 및 출력 기능](#4-크기-반환size-및-출력-기능)
+- [완성된 클래스 코드](#완성된-클래스-코드)
+- [사용 예시](#사용-예시)
+- [학습한 내용 정리](#학습한-내용-정리)
 
 ---
 
