예제를 통해 알아보는 MSA개념 태그 및 카테고리 추가

--- a/_posts/2024-12-21-예시를 통해 알아보는 MSA 개념.md
+++ b/_posts/2024-12-21-예시를 통해 알아보는 MSA 개념.md
@@ -1,4 +1,10 @@
-# 🌟 예시를 통해 알아보는 MSA 개념
+---
+layout: post
+title: "예시를 통해 알아보는 MSA 개념"
+date: 2024-12-21
+categories: [MSA]
+tags: [MSA]
+---
 
 ## 🌟 들어가며
 
