논클러스터드 인덱스, 클러스터드 인덱스 이미지 안나오는 현상 수정

--- a/_posts/2025-01-16-Index에 대해서 알아보기.md
+++ b/_posts/2025-01-16-Index에 대해서 알아보기.md
@@ -44,11 +44,11 @@ CREATE INDEX `loginId` ON `member` (loginId);
     - PK와 유사함
     - 범위 검색에 강력함
     - 테이블에 여러개
-     ![클러스터드 인덱스](https://prod-files-secure.s3.us-west-2.amazonaws.com/c313a4ff-1684-4580-bfd1-d45db93f2471/405f2ae0-b1d2-4b02-91f8-54639a131ecd/image.png)
+     ![클러스터드 인덱스](clustered_index_detail1.png)
 - **Non-Clustered Index(논 클러스터드 인덱스)**
     - 순서 상관없음
     - 한 테이블에 여러개
-     ![논클러스터드 인덱스스](https://prod-files-secure.s3.us-west-2.amazonaws.com/c313a4ff-1684-4580-bfd1-d45db93f2471/3e884473-6fb4-4452-8c23-5fe0bf789a41/image.png)
+     ![논클러스터드 인덱스](nonclustered_index_detail1.png)
 **기능적 분류**
 
 **PRIMARY KEY : 주키 인덱스, UNIQUE KEY : 유니크 인덱, NORMAL KEY : 일반(유니크가 없는 인덱스), FULL TEXT(풀 텍스트 인덱스)**
