--- a/_posts/2025-02-23-순환 참조 문제 해결.md
+++ b/_posts/2025-02-23-순환 참조 문제 해결.md
@@ -6,9 +6,8 @@ categories: [문제 해결]
 tags: [Java, JPA, SpringFramework]
 ---
 
-# Spring JPA에서 순환 참조 문제 해결하기: DTO 패턴의 중요성
-
-순환 참조(Circular Reference) 문제는 Spring과 JPA를 사용하는 많은 개발자들이 마주치는 흔한 문제입니다. 저도 커피 주문 시스템을 개발하면서 이 문제를 경험했고, 해결 과정에서 DTO 패턴의 중요성을 깨달았습니다.
+순환 참조(Circular Reference) 문제는 Spring과 JPA를 사용하는 많은 개발자들이 마주치는 흔한 문제입니다. 
+저도 커피 주문 시스템을 개발하면서 이 문제를 경험했고, 해결 과정에서 DTO 패턴의 중요성을 깨달았습니다.
 
 ## 문제 상황: 엔티티 간의 순환 참조
 
