docs - 이미지 위치 변경

--- a/_posts/2025-01-16-Index에 대해서 알아보기.md
+++ b/_posts/2025-01-16-Index에 대해서 알아보기.md
@@ -44,11 +44,17 @@ CREATE INDEX `loginId` ON `member` (loginId);
     - PK와 유사함
     - 범위 검색에 강력함
     - 테이블에 여러개
-     ![클러스터드 인덱스](clustered_index_detail1.png)
+    <br>
+     ![클러스터드 인덱스](assets/img/clustered_index_detail1.png)
+    <br/>
 - **Non-Clustered Index(논 클러스터드 인덱스)**
     - 순서 상관없음
     - 한 테이블에 여러개
-     ![논클러스터드 인덱스](nonclustered_index_detail1.png)
+    <br/>
+     ![논클러스터드 인덱스](assets/img/nonclustered_index_detail1.png)
+    <br/>
+
+    
 **기능적 분류**
 
 **PRIMARY KEY : 주키 인덱스, UNIQUE KEY : 유니크 인덱, NORMAL KEY : 일반(유니크가 없는 인덱스), FULL TEXT(풀 텍스트 인덱스)**
